@@ -53,6 +53,7 @@ Bug
     [HBASE-7432] - TestHBaseFsck prevents testsuite from finishing
     [HBASE-7435] - BuiltInGzipDecompressor is only released during full GC
     [HBASE-7440] - ReplicationZookeeper#addPeer is racy
+    [HBASE-7455] - Increase timeouts in TestReplication and TestSplitLogWorker
 
 Improvement
 
